cabal-version: >= 1.10
build-type: Simple
name:               hafly-web-repl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nathan Bedell
maintainer:         nbedell@tulane.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hafly-web-repl
    main-is:          Main.hs
    default-extensions:
        PartialTypeSignatures
      , RecordWildCards
      , ScopedTypeVariables
    build-depends:
        base
      , jsaddle
      , jsaddle-warp
      , reflex-dom
      , text
      , megaparsec
      , multimap
      , hafly
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
    if impl(ghcjs)
      ghc-options: -dedupe
      cpp-options: -DGHCJS_BROWSER
    if os(darwin)
      ghc-options: -dynamic
